assets/_dev/src/scss/components/_footer.scss
.footer {
	display          : flex;
	justify-content  : space-around;
	align-items      : center;
	background-color : $black;
	padding          : 10rem 2rem;
	color            : $white;
	font-family      : $mainFont;
	position         : relative;
	z-index          : 0;

    @include max-width($screenMd) {
        flex-wrap: wrap;
        padding: 3rem 2rem;
        justify-content: flex-start;
        ul{
            padding-right: 2rem;
        }
    }

	p {
		font-size     : 1.5em;
		font-family   : $titleFont;
		font-weight   : 600;
		margin-bottom : 1rem;
	}

	&__about, &__misc, &__social, &__access {
		padding : 2em 0.2rem;
	}

	ul {
		li {
			&:not(:last-child) {
				margin-bottom : 0.7em;
			}

			&::before {
				content        : ">";
				font-family    : $titleFont;
				color          : $secondary;
				font-size      : 1.4em;
				margin-right   : 0.5em;
				vertical-align : text-top;
			}

			a {
				color           : $white;
				font-size       : 1em;
				font-family     : $mainFont;
				text-decoration : none;
				position: relative;
				z-index: 2;

				&:hover{
					cursor			 : pointer;
				}

				&::after {
					content          : "";
					position         : absolute;
					bottom           : 2px;
					left             : 0;
					width            : 0;
					height           : 5px;
					z-index: -1;
					background-color : $secondary;
					transition       : all .3s ease-in-out;
				}

				&:hover::after {
					width : 100%;
				}
			}
		}
	}

	&__pre{
		background-color : $primaryDark;
		color: $white;
		font-size: 0.9em;
		padding: 1em 0;
		text-align : center;
		font-family: $mainFont;
        @include max-width($screenMd) {
            line-height: 1.7;
        }
	}
}

